# BMSTU-Software-development

app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/project1/: MainActivity.java  PinpadActivity.java  TransactionEvents.java
app/src/main/res/layout/: activity_main.xml  activity_pinpad.xml
app/src/main/res/values/: strings.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
